--- a/composer.json
+++ b/composer.json
@@ -1,14 +1,14 @@
 {
-        "name": "meerkat/meerkat-sf-famfamfam",
+        "name": "meerkat/meerkat-sf-jqueryautocomplete",
         "type": "kohana-module",
         "description": "StaticFiles library for MeerkatCMF (on Kohana 3.3)",
-        "homepage": "http://www.famfamfam.com/lab/icons/silk/",
-		"license": ["OFL-1.1", "MIT"],
+        "homepage": "http://www.devbridge.com/projects/autocomplete/jquery/",
+		"license": "MIT",
         "keywords": ["kohana", "module", "meerkat", "static-files"],
         "authors": [
                 {
-                        "name": "Mark James",
-                        "homepage": "http://www.famfamfam.com/about/",
+                        "name": "Devbridge Group",
+                        "homepage": "http://www.devbridge.com/",
                         "role": "Developer"
                 },		
                 {
